--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ body {
 }
     
 #spiral-image {
-	height: 50vh;
+	height: 400px;
+	width: 400px;
 	padding: 2vh;
 	display: block;
 	position: relative;
@@ -21,7 +22,6 @@ body {
 	position: relative;
 	display: inline-block;
 }
-
 
 .overlay-text {
 	position: absolute;
@@ -34,7 +34,9 @@ body {
 	text-align: center;
 	z-index: 3;
 	text-shadow: 0px 8px 32px rgba(0, 0, 0, 1);
+	width: 400px;
 }
+
 #help-list {
 	font-family: Arial, sans-serif;
 	list-style: none;
