--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,9 @@ body {
 }
     
 #spiral-image {
-	height: 400px;
-	width: 400px;
+	max-width: 400px;
+	max-height: 400px;
+	width: 80vw;
 	padding: 2vh;
 	display: block;
 	position: relative;
@@ -21,6 +22,7 @@ body {
 .image-container {
 	position: relative;
 	display: inline-block;
+    margin: 0 auto;
 }
 
 .overlay-text {
@@ -34,7 +36,7 @@ body {
 	text-align: center;
 	z-index: 3;
 	text-shadow: 0px 8px 32px rgba(0, 0, 0, 1);
-	width: 400px;
+	width: 100%;
 }
 
 #help-list {
@@ -70,6 +72,7 @@ body {
 	height: 100%;
 	margin: 0;
 	position: relative;
+    transform: translateY(-25%);
 }
 
 a {
