--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 	max-width: 400px;
 	max-height: 400px;
 	width: 80vw;
-	padding: 2vh;
+	padding: 4vh;
 	display: block;
 	position: relative;
 	opacity: 50%;
@@ -31,12 +31,19 @@ body {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	color: white;
-	font-size: 2rem;
 	font-weight: bold;
 	text-align: center;
 	z-index: 3;
 	text-shadow: 0px 8px 32px rgba(0, 0, 0, 1);
 	width: 100%;
+}
+
+.overlay-text h1 {
+	font-size: 4rem;
+}
+
+.overlay-text h5 {
+	font-size: 2rem;
 }
 
 #help-list {
